docker-frontend-backend-db-master/K8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: todo.k8s.local 
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: todo-nginx
            port:
              number: 80
